# l2-lxp-liquidity-reward

./: .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy-prod.yml  main.yml  test.yml
adapters/: block_numbers.tsv  hourly_blocks.csv  package.json  runScript.js  testScript.js
adapters/3ADAO/: hourly_blocks.csv  package.json
adapters/affine/: hourly_blocks.csv  package.json  tsconfig.json
adapters/beefy/: hourly_blocks.csv  package.json
adapters/celer/: README.md  package.json  tsconfig.json
adapters/clip-finance/: hourly_blocks.csv  outputData2.csv
adapters/clip_finance/: package.json  tsconfig.json
adapters/connext/: output.csv  package.json  tsconfig.json
adapters/contango/: package.json
adapters/davos/: package.json
adapters/defiedge/: hourly_blocks.csv  package.json  pnpm-lock.yaml  tsconfig.json
adapters/deri/: outputData.csv  package.json
adapters/dodo/: package.json
adapters/dysonfinance/: package.json  tsconfig.json
adapters/elkfinance/: package.json
adapters/gammastrategies/: package.json
adapters/gravita/: block_numbers.csv  outputData.csv  package.json
adapters/horizondex/: outputData.csv  package.json
adapters/inception/: package.json  tsconfig.json
adapters/interport/: package.json
adapters/izumiswap/: package.json  tsconfig.json
adapters/kelp_gain_linea/: hourly_blocks.csv  package.json
adapters/kelp_gain_yay/: hourly_blocks.csv  package.json  (+1 more)
config/: settings.toml
devops/: Dockerfile
velocore/: package.json
(+475 files in other folders)
